# todo-app_first

./: package-lock.json  package.json
backend/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  todo_app.db
backend/app/: auth.py  database.py  main.py  model.py  models.py  schemas.py
backend/app/api/: todos.py  user.py
backend/scripts/: seed_database.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: apiClient.ts  auth.ts
frontend/src/app/: store.ts
frontend/src/components/: Header.tsx  Login.tsx  TodoEdit.tsx  TodoInput.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/features/todos/: Todo.ts  todoSlice.ts
frontend/src/services/: api.ts
src/: App.tsx  main.tsx
src/components/: TodoEdit.tsx  TodoItem.tsx  TodoList.tsx
src/features/todos/: Todo.ts  todoSlice.ts
