[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A Todo application"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
sqlalchemy = "<1.4"  # 1.4未満のバージョンに変更
databases = "^0.4.3"
pydantic = "^1.8.2"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"